some smaill change

--- a/src/main/webapp/modules/common/left-nav.html
+++ b/src/main/webapp/modules/common/left-nav.html
@@ -22,7 +22,7 @@
                                 <img class="img-responsive center-block " src="images/user.png"
                                      style="border-radius: 50%;margin-top:30%;" alt=""/><br/>
 
-                                <p style="margin: 18px 0 15px 0">努力、奋斗</p>
+                                <p style="margin: 18px 0 15px 0">提高姿势水平</p>
                             </div>
                         </div>
                     </li>
