--- a/src/main/webapp/modules/index/index.view.html
+++ b/src/main/webapp/modules/index/index.view.html
@@ -2,7 +2,7 @@
 <div class="customContainer">
     <div style="padding:0px 8px 20px 8px;">
         <div style="margin: 70px 0 40px 0;">
-            <h3 style="font-family: '楷体';text-align: center;">欢迎来到我的博客。</h3>
+            <h3 style="font-family: '楷体';text-align: center;">欢迎来到我的博客，一起分享人生经验。</h3>
         </div>
         <div style="height: 100%;padding: 0 15px 10px 15px;">
             <div class="col-sm-12 col-md-6" style="height: 190px;padding: 15px">
