--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title> 稻花香里说丰年</title>
     <meta name="fragment" content="!">
-    <meta name="keywords" content="潘海南,FireOct,个人网站,博客,项目,荐文,推荐文章,友链">
+    <meta name="keywords" content="guxiangfly,FireOct,个人网站,博客,项目,荐文,推荐文章,友链">
     <!-- by霸下工作室 -->
     <link rel="icon" href="images/fire_favicon.ico">
     <meta name="viewport"
